<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Health Nut</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="password_cap">PASSWORD</string>
    <string name="pin_cap">Pin</string>
    <string name="email_address">Email Address</string>
    <string name="email">EMAIL</string>
    <string name="kirkwood">Kirkwood</string>
    <string name="make_your_order_and_enjoy_our_delicious_n_cookies_and_cakes">Place an order and enjoy our delicious\nsalads, panini and so much more</string>
    <string name="proceed_to_menu">proceed to menu</string>
    <string name="proceed_to_checkout">proceed to checkout</string>
    <string name="proceed_to_payment">proceed to payment</string>
    <string name="points_you_will_earn">Points you will earn</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_our_store">Welcome to our store!</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="please_change_your_password_via_mobile_app">Please change your password via\nmobile app</string>
    <string name="login_again">LOGIN AGAIN</string>
    <string name="login_again_text">LOGIN AGAIN</string>
    <string name="your_username_and_password_does_not_match">Your username and password does not match</string>
    <string name="check_your_internet_connection_settings_n_and_try_again">Check your Internet connection \n settings and try again</string>
    <string name="guest">GUEST</string>
    <string name="crew">CREW</string>
    <string name="make_an_order">Place an order</string>
    <string name="available_wi_fi_networks">Available Wi-fi networks</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="no_connection">No Connection</string>
    <string name="not_connected">not connected</string>
    <string name="connecting">Connecting....</string>
    <string name="try_again">try again</string>
    <string name="connect">connect</string>
    <string name="hot_box_2">Hot Box 2</string>
    <string name="blank_email">You must enter your email!</string>
    <string name="blank_special">You must enter Special Instructions!</string>
    <string name="blank_password">You must enter your password!</string>
    <string name="invalid_pin">Please enter a valid pin!</string>
    <string name="invalid_email">Please enter a valid email!</string>
    <string name="invalid_amount">Please enter a valid Amount!</string>
    <string name="invalid_name">Please enter Name!</string>
    <string name="invalid_GiftCard">Please enter Gift Card!</string>
    <string name="invalid_Promocode">Please enter Promo Code!</string>
    <string name="invalid_surname">Please enter SurName!</string>
    <string name="invalid_phone_number">Please enter Phone!</string>
    <string name="invalid_phone">Please enter a valid phone. It should be 8 to 15 digits long!</string>
    <string name="invalid_lastName">Please enter LastName!</string>
    <string name="open">OPEN</string>
    <string name="new_order">New order</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By:</string>
    <string name="filter_by">Filter By:</string>
    <string name="_09_03_am">09:03 AM</string>
    <string name="_44565">#44565</string>
    <string name="alex_bauman">Alex Bauman</string>
    <string name="check_connection">Check Connection</string>
    <string name="connection">Connection</string>
    <string name="gps_not_found_title">GPS location not enabled</string>
    <string name="gps_not_found_message">Please enable location permission so we can get list of all wifi\'s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_gps_settings">GPS is settings</string>
    <string name="msg_gps_settings_confirmation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="label_settings">Settings</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="no_location_set">No Location Set</string>
    <string name="title_open">Open</string>
    <string name="title_open_time">09:03 am</string>
    <string name="orders">Orders</string>
    <string name="deliveries">Deliveries</string>
    <string name="menu">Menu</string>
    <string name="time_management">Time Management</string>
    <string name="store">Store</string>
    <string name="logout">Logout</string>
    <string name="clear">Clear Order</string>
    <string name="label_clear">Clear Adjustment</string>
    <string name="title_device_id">Device ID - %1$s</string>
    <string name="title_version">V %1$s</string>
    <string name="angelina">Angelina</string>
    <string name="manager">manager</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in">Clock In</string>
    <string name="dismiss">Dismiss</string>
    <string name="clocked_in">Clocked In</string>
    <string name="clocked_out">Clocked Out</string>
    <string name="powered_by">Powered by</string>
    <string name="oper">OPER</string>
    <string name="dummy_mail_id">angeakman@mail.com</string>
    <string name="_text"> - </string>
    <string name="cart">Cart</string>
    <string name="_3101_s_grand_blvd_st_louis_mo">332 Manhattan Beach Blvd Manhattan Beach, CA 90266</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="action">Action</string>
    <string name="clocked_in_">Clocked In:</string>
    <string name="employee">Employee</string>
    <string name="assigned">Assigned</string>
    <string name="position">Position</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="dummy_mobile_number">608-851-6889</string>
    <string name="dummy_store_name">Manhattan Beach Health Nut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="Head_manager_Jack_Lewis">Head manager – Jack Lewis</string>
    <string name="sunday">Sunday</string>
    <string name="ordering_hours">Ordering hours</string>
    <string name="assigned_emplooyees">Assigned Employees</string>
    <string name="buffer_times">Buffer Times (Admin)</string>
    <string name="pickup">Pickup</string>
    <string name="close">Closed</string>
    <string name="device_id">Device ID - 3fv987fk</string>
    <string name="dummyTime">10:15 AM</string>
    <string name="rickybaummm_mail_com">rickybaummm@mail.com</string>
    <string name="print_the_label">Print Receipt</string>
    <string name="loyalty_with_phone">Loyalty With Phone</string>
    <string name="customer">CUSTOMER</string>
    <string name="_608_851_6889">608–851–6889</string>
    <string name="rick_bauman">Rick Bauman</string>
    <string name="promised_time">PROMISED TIME:</string>
    <string name="_6_cookies">6 Cookies</string>
    <string name="are_you_sure_log_out">Are you sure?</string>
    <string name="are_you_sure_cancel_and_clear">Are you sure you want to cancel this order?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_out">"Log Out</string>
    <string name="card_amp_bow">Gift Card</string>
    <string name="_card_amp_bow_">Gift Card :</string>
    <string name="_card_amp_bow">Card &amp; Bow:</string>
    <string name="special_instructions">Special instructions :</string>
    <string name="special_instruction">Special instructions</string>
    <string name="label_special_instructions">Special instructions (optional)</string>
    <string name="_140">$140</string>
    <string name="_40">40</string>
    <string name="completed">Completed</string>
    <string name="received">Received</string>
    <string name="card_Bow">Card &amp; Bow</string>
    <string name="dispatched">Dispatched</string>
    <string name="redispatch">Redispatch</string>
    <string name="new_text">New</string>
    <string name="packaging">packing</string>
    <string name="making">making</string>
    <string name="packed">Packed</string>
    <string name="complete_order">Complete Order</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="auto_assign_driver">Auto Assign Driver</string>
    <string name="snooze_item">Snooze Item</string>
    <string name="assign_driver_text">Assign Driver:</string>
    <string name="confirm">Confirm</string>
    <string name="driver">Driver</string>
    <string name="order_44564">Order #44564</string>
    <string name="placed">Placed:</string>
    <string name="_07_17_2022_02_34_pm">07/17/2022, 02:34 PM</string>
    <string name="total">total</string>
    <string name="angelina_rickman">Angelina Rickman</string>
    <string name="order">ORDER</string>
    <string name="received_order">Receive Order</string>
    <string name="packing_order">Pack Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="completed_order">Complete Order</string>
    <string name="statusLog">STATUS LOG</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_map">Tracking Map</string>
    <string name="zoom_map">Zoom map</string>
    <string name="destination">Destination</string>
    <string name="DELIVERY_LOCATION">DELIVERY LOCATION</string>
    <string name="message_to_driver">Message to Driver</string>
    <string name="message">Message</string>
    <string name="order_id">ORDER ID</string>
    <string name="order_type">Order type</string>
    <string name="status">Status</string>
    <string name="promised_time_text">Promised Time</string>
    <string name="order_Placed">order Placed</string>
    <string name="placed_order">Placed order</string>
    <string name="_09_00_am">09:00 AM</string>
    <string name="all">All</string>
    <string name="in_store">In-Store</string>
    <string name="in_store_text">In Store</string>
    <string name="today">Today</string>
    <string name="order_placed">Order placed</string>
    <string name="delivered">Delivered</string>
    <string name="status_text">Status:</string>
    <string name="select">Select</string>
    <string name="select_reason">Select Reason</string>
    <string name="popular">Popular</string>
    <string name="select_from_list">From</string>
    <string-array name="statusArray">
        <item>All</item>
        <item>New</item>
        <item>Packing</item>
        <item>Received</item>
        <item>Cancelled</item>
        <item>Completed</item>
        <item>Refunded</item>
    </string-array>
    <string name="no_added_any_one_menu">Any One Product Not Added</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="snoozed_items">Snoozed items</string>
    <string name="category_text">Category: All</string>
    <string name="registration_is_successful">Registration is successful</string>
    <string name="thank_you_you_can_use_gift_card_right_now">Thank you! You can use your new gift card now.</string>
    <string name="long_ticket_time">Long Ticket Time</string>
    <string name="wrong_to_go_food">Wrong To Go Food</string>
    <string name="did_not_like">Did Not Like</string>
    <string name="foreign_object">Foreign Object</string>
    <string name="spill">Spill</string>
    <string name="management">Management</string>
    <string name="missed_item">Missed Item</string>
    <string name="training">Training</string>
    <string name="marketing">Marketing</string>
    <string name="entry_error">Entry Error</string>
    <string name="eightySix">Eighty Six</string>
    <string name="guest_changed_mind">Guest Changed Mind</string>
    <string name="test">Test</string>
    <string name="i_am_finish">I am Finished</string>
</resources>