<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_F0F4F6"
            tools:context=".ui.main.order.OrdersFragment"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/century_schoolbook_bold"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/allCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingTextView"
                android:layout_marginStart="@dimen/_3sdp"
                android:checked="true"
                android:fontFamily="@font/gotham_book"
                android:includeFontPadding="false"
                android:text="@string/all"
                style="@style/Checkbox"
                android:textColor="@color/black"
                android:textSize="@dimen/_5ssp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingTextView"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/allCheckBox"
                android:fontFamily="@font/gotham_book"
                android:includeFontPadding="false"
                style="@style/Checkbox"
                android:text="@string/available"
                android:textColor="@color/grey"
                android:textSize="@dimen/_5ssp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/unavailableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingTextView"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/availableCheckBox"
                android:fontFamily="@font/gotham_book"
                android:includeFontPadding="false"
                style="@style/Checkbox"
                android:text="@string/unavailable"
                android:textColor="@color/grey"
                android:textSize="@dimen/_5ssp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/snoozedItemCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingTextView"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/unavailableCheckBox"
                style="@style/Checkbox"
                android:fontFamily="@font/gotham_book"
                android:includeFontPadding="false"
                android:text="@string/snoozed_items"
                android:textColor="@color/grey"
                android:visibility="gone"
                android:textSize="@dimen/_5ssp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/statusSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_3sdp"
                app:strokeColor="@color/color_DFE7EB"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/drop_down_icon"
                        android:drawablePadding="@dimen/_3sdp"
                        android:dropDownWidth="@dimen/_68sdp"
                        android:minWidth="@dimen/_65sdp"
                        android:dropDownVerticalOffset="6dp"
                        android:inputType="none"
                        android:paddingStart="@dimen/_5sdp"
                        android:fontFamily="@font/gotham_book"
                        android:paddingEnd="@dimen/_3sdp"
                        android:popupBackground="@drawable/order_list_background"
                        android:text="@string/category_text"
                        android:textColor="@color/grey"
                        app:endIconTint="@color/color_ADC2CC"
                        tools:ignore="LabelFor,TouchTargetSizeCheck" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/allCheckBox"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMenuView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:clickable="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/emptyMessageAppCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_added_any_one_menu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8ssp"
                    android:visibility="gone"
                    app:fontFamily="@font/inter_medium" />

            </FrameLayout>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>