<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_205sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_9sdp"
        app:cardElevation="@dimen/_2sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_gift" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/century_schoolbook_bold"
                android:includeFontPadding="false"
                android:text="@string/registration_is_successful"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_7ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/gotham_book"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/thank_you_you_can_use_gift_card_right_now"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="@dimen/_5ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backToCheckoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:backgroundTint="@color/button_color"
                android:fontFamily="@font/gotham_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.01"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/i_am_finish"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_6ssp"
                app:cornerRadius="@dimen/_4sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

